<resources>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ligula sapien, fermentum vitae aliquam sed, lacinia in nibh. Pellentesque euismod diam eget justo interdum, sit amet elementum ipsum vulputate. Aliquam sed purus urna. Vivamus luctus nisi sem, a fringilla velit iaculis id. Donec nec vulputate justo. Fusce vulputate sodales tellus, in fringilla ante posuere non. Vivamus vulputate nisl non augue dignissim, consectetur rutrum risus facilisis. Sed consectetur aliquam dolor, sed pulvinar mi tristique vitae. Donec quis ligula quis velit consequat dictum id eu felis. Mauris ac congue ante, sed elementum eros.\n\nSed eu euismod dolor, a vestibulum lorem. Phasellus euismod volutpat risus sit amet pellentesque.  Proin sed massa eget risus malesuada dignissim et in ipsum..\n\nNullam risus felis, dictum et varius eget, rutrum non nunc. Vestibulum lorem nulla, porttitor ac sapien interdum, porta tristique turpis. Quisque ut dui vitae urna congue scelerisque. Nulla eu commodo felis. Nulla aliquam magna a arcu elementum, vitae tincidunt risus semper. Sed consectetur diam vel magna mattis, sed congue nisi fringilla. Ut in facilisis elit. Etiam aliquet orci urna. Nam interdum nunc fringilla iaculis cursus.</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="app_name">钱内助理财</string>
    <string name="main_tab_text1">首页</string>
    <string name="main_tab_text2">理财</string>
    <string name="main_tab_text3">钱袋</string>
    <string name="main_tab_text4">活动</string>
    <string name="toast_phone_regex">请输入正确的手机号</string>
    <string name="toast_name_regex">姓名格式不正确</string>
    <string name="toast_more_regex">详细地址描述信息不得少于5个字符</string>
    <string name="add_address">温馨提示：因平台发放实物类奖品需要，请您填写真实有效的邮寄信息。因虚假或缺失的邮寄信息造成的奖品错发，平台概不负责。</string>
    <string name="http_exception_parse">数据解析异常</string>
    <string name="http_internet_exception_connect">网络连接异常</string>
    <string name="http_no_record">没有更多数据</string>
    <string name="no_sensor_dialog_title">您的设备没有指纹传感器或安卓版本小于6.0</string>
    <string name="no_sensor_dialog_message">设备上没有指纹传感器，请单击“取消”退出。</string>
    <string name="no_fingerprint_enrolled_dialog_title">您的设备没有指纹登记</string>
    <string name="no_fingerprint_enrolled_dialog_message">您的设备没有指纹登记，进入\n
        <font fgcolor="green">Setting->Security->Nexus Imprint\n</font>
        对enrollor点击取消退出</string>
    <string name="ok_btn_dialog">OK</string>
    <string name="cancel_btn_dialog">Cancel</string>
    <string name="fingerprint_success">指纹识别。</string>
    <string name="fingerprint_not_recognized">指纹不识别。再试一次.</string>
    <string name="AcquiredGood_warning">获得的图像是好的。</string>
    <string name="AcquiredImageDirty_warning">指纹不识别。再试一次.</string>
    <string name="AcquiredInsufficient_warning">指纹不识别。再试一次.</string>
    <string name="AcquiredPartial_warning">指纹不识别。再试一次.</string>
    <string name="AcquiredTooFast_warning">指纹不识别。再试一次.</string>
    <string name="AcquiredToSlow_warning">指纹不识别。再试一次.</string>
    <string name="ErrorCanceled_warning">由于指纹传感器不可用，操作被取消.</string>
    <string name="ErrorHwUnavailable_warning">硬件不可用。稍后再试。</string>
    <string name="ErrorLockout_warning">该操作被取消，因为API被锁定由于太多的尝试。</string>
    <string name="ErrorNoSpace_warning">指纹不识别。再试一次.</string>
    <string name="ErrorTimeout_warning">指纹不识别。再试一次.</string>
    <string name="ErrorUnableToProcess_warning">指纹不识别。再试一次.</string>
    <string name="title_dialog">友情提示</string>
    <string name="message_permission_failed">你拒绝了我们的权限申请，真是不能愉快的玩耍了！</string>
    <string name="message_permission_rationale">您已拒绝过定位权限，没有定位权限无法为您推荐附近妹子，赶快定位权限给我！</string>
    <string name="btn_dialog_yes_permission">好，给你</string>
    <string name="btn_dialog_no_permission">我拒绝</string>
    <string name="iconfont_titlebar_back_btn">&#xe61f;</string>
    <string name="iconfont_che">&#xe631;</string>
    <string name="iconfont_fang">&#xe62f;</string>
    <string name="iconfont_wei">&#xe61d;</string>
    <string name="iconfont_productlist_rate">&#xe613;</string>
    <string name="iconfont_productlist_money">&#xe612;</string>
    <string name="iconfont_productlist_time">&#xe614;</string>
    <string name="iconfont_jie">&#xe611;</string>
    <string name="iconfont_zai">&#xe617;</string>
    <string name="iconfont_true">&#xe61a;</string>
    <string name="iconfont_product_xia">&#xe615;</string>
    <string name="iconfont_product_shang">&#xe616;</string>
    <string name="iconfont_product_fenxiang">&#xe63e;</string>
    <string name="iconfont_money">&#xe62c;</string>
    <string name="iconfont_bank">&#xe60f;</string>
    <string name="iconfont_phone">&#xe605;</string>
    <string name="iconfont_verify">&#xe635;</string>
    <string name="iconfont_password">&#xe624;</string>
    <string name="iconfont_tuijian">&#xe634;</string>
    <string name="iconfont_light">&#xe621;</string>
    <string name="main_tab_text_login">登录</string>
    <string name="main_tab_text_reg">注册</string>
    <string name="main_tab_text_money">可用余额</string>
    <string name="main_tab_text_result">返回</string>
    <string name="username_hint">手机号/邮箱</string>
    <string name="password_hint">钱内助登录密码</string>
    <string name="password_forget">忘记? </string>
    <string name="reg_btn">新用户注册</string>
    <string name="reg_btn_next">下一步</string>
    <string name="reg_text_username">请输入用户名</string>
    <string name="reg_text_password">输入8~20位登录密码</string>
    <string name="reg_text_repassword">请再次输入新的登录密码</string>
    <string name="reg_text_tuijian">注册推荐码(可不填)</string>
    <string name="reg_text_phone">请输入手机号码</string>
    <string name="reg_text_real_name">你的真实姓名</string>
    <string name="reg_text_real_hao">你的真实身份证号</string>
    <string name="reg_text_verify">输入验证码</string>
    <string name="reg_btn_submit">立即获取</string>
    <string name="submit">提交</string>
    <string name="reg_btn_secces">快速注册</string>
    <string name="login_btn_return_password">找回密码</string>
    <string name="login_btn_return_find">找回方式</string>
    <string name="login_btn_return_find_phone">手机找回</string>
    <string name="login_btn_return_find_email">邮箱找回</string>
    <string name="login_btn_return_find_bao">密保找回</string>
    <string name="login_btn_return_find_confirm">确认</string>
    <string name="my_btn_recharge">充值</string>
    <string name="my_management">账户管理</string>
    <string name="my_management_safe">安全中心</string>
    <string name="my_management_business">安全中心</string>
    <string name="loading">加载中...</string>
    <string name="homepage_title_name">钱内助</string>
    <string name="product_time_limit_day_format">"期限 &lt;b&gt; &lt;font color=#333333&gt;%1$s&lt;/font&gt; &lt;/b&gt; 天"</string>
    <string name="product_time_limit_month_format">"期限 &lt;b&gt; &lt;font color=#333333&gt;%1$s&lt;/font&gt; &lt;/b&gt; 个月"</string>
    <string name="product_already_buy_intro_format">"已投人数 &#160;   &lt;b&gt; &lt;font color=#333333&gt;%1$s&lt;/font&gt; &lt;/b&gt; &#160; 人&#160;&#160;&#160;&#160;&#160;&#160; &#160;&#160;起投金额 &#160; &lt;b&gt; &lt;font color=#333333&gt;%2$s&lt;/font&gt; &lt;/b&gt;&#160;元"</string>
    <string name="product_presell_buy_intro_format">"开售时间 &#160;    &lt;b&gt; &lt;font color=#333333&gt;%1$s&lt;/font&gt; &lt;/b&gt; &#160; &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;  起投金额  &#160;&lt;b&gt; &lt;font color=#333333&gt;%2$s&lt;/font&gt; &lt;/b&gt;&#160;元"</string>
    <string name="product_baobao_time_limit_intro">随存随取</string>
    <string name="show_detail">查看详情</string>
    <string name="goto_buy">立即投资</string>
    <string name="product_list_apr_baobao_format">  &lt;font color=#333333&gt;随存随取&lt;/font&gt; </string>
    <string name="product_list_apr_format">"年化收益 &lt;b&gt; &lt;font color=#ff5f5f&gt;%1$s%%&lt;/font&gt; &lt;/b&gt;"</string>
    <string name="product_list_already_buy_count_format">"&lt;font color=#333333&gt;%1$s人&lt;/font&gt;已投"</string>
    <string name="product_list_lowest__format">" &lt;font color=#333333&gt;%1$s元&lt;/font&gt;起购"</string>
    <string name="product_list_limit_month_count_format">" &lt;font color=#333333&gt;%1$s个月&lt;/font&gt;"</string>
    <string name="product_list_limit_day_count_format">" &lt;font color=#333333&gt;%1$s天&lt;/font&gt;"</string>
    <string name="balance_withdraw_can_withdraw_money_format">"可提现金额：%1$s 元"</string>
    <string name="balance_withdraw_bank_card_name_format">"%1$s&#160;(&#160;尾号%2$s&#160;)&#160;"</string>
    <string name="balance_withdraw_no_bankcard_intro_format">"该银行卡还未完善开户信息， &lt;b&gt; &lt;font color=#F75555&gt;请先完善&lt;/font&gt; &lt;/b&gt;"</string>
    <string name="balance_withdraw_success_money_format">"金额：&#160;%1$s 元"</string>
    <string name="balance_withdraw_success_to_bankcard_format">"提现至：%1$s&#160;(&#160;尾号%2$s&#160;)&#160;"</string>
    <string name="balance_withdraw_fail_balance_money_format">"当前账户余额：%1$s 元"</string>
    <string name="baobao_out_top_intro_format">本次您最多可转出 &lt;font color=#fa6812&gt;%1$s&lt;/font&gt;  元</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_error">"手势密码不对"</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="sy1">&#xe625;</string>
    <string name="sy2">&#xe626;</string>
    <string name="wdqz1">&#xe628;</string>
    <string name="wdqz2">&#xe629;</string>
    <string name="more1">&#xe627;</string>
    <string name="more2">&#xe62a;</string>
    <string name="cztx">&#xe60c;</string>
    <string name="zhgl">&#xe60a;</string>
    <string name="hbjhd">&#xe60b;</string>
    <string name="aqzx">&#xe60d;</string>
    <string name="jyjl">&#xe610;</string>
    <string name="zctj">&#xe60e;</string>
    <string name="wdyhk">&#xe60f;</string>
    <string name="sgsb">&#xe62d;</string>
    <string name="sgcg">&#xe62e;</string>
    <string name="sg_success">申购成功</string>
    <string name="sg_failed">出错啦~</string>
    <string name="cpxq">&#xe62c;</string>
    <string name="rl">&#xe618;</string>
    <string name="cal">&#xe62b;</string>
    <string name="kong">输入金额为空，请重新输入！</string>
</resources>