<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D7D6D6" />
            <!-- 底部导航-->


            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal">

                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/main_tab0"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >


                    <ImageView
                        android:id="@+id/main_tab0_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100px"
                        android:layout_marginTop="20px"
                        android:background="@drawable/homepager_nomal" />

                    <TextView
                        android:id="@+id/main_tab0_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="19px"
                        android:layout_marginLeft="100px"
                        android:text="@string/main_tab_text1"
                        android:layout_marginTop="12px"
                        android:textColor="@drawable/tab_text"
                       />
                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/main_tab1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >


                    <ImageView
                        android:id="@+id/main_tab1_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px"
                        android:layout_marginLeft="190px"
                        android:background="@drawable/product_nomal" />

                    <TextView
                        android:id="@+id/main_tab1_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_tab_text2"
                        android:layout_marginTop="12px"
                        android:layout_marginLeft="190px"
                        android:textColor="@drawable/tab_text"
                       />
                </com.zhy.autolayout.AutoLinearLayout>


                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/main_tab2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="190px"
                    android:layout_marginBottom="19px"
                    android:gravity="center"
                    android:orientation="vertical"
                    >


                    <ImageView
                        android:id="@+id/main_tab2_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px"
                        android:background="@drawable/active_nomal" />

                    <TextView
                        android:id="@+id/main_tab2_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_tab_text4"
                        android:layout_marginTop="12px"
                        android:textColor="@drawable/tab_text"
                       />
                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/main_tab3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="170px"
                    android:layout_marginBottom="19px"
                    android:gravity="center"
                    android:orientation="vertical"
                    >


                    <ImageView
                        android:id="@+id/main_tab3_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px"
                        android:background="@drawable/mine_nomal" />

                    <TextView
                        android:id="@+id/main_tab3_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_tab_text3"
                        android:layout_marginTop="12px"
                        android:textColor="@drawable/tab_text"
                        />
                </com.zhy.autolayout.AutoLinearLayout>







            </com.zhy.autolayout.AutoLinearLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>