<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D7D6D6" />
            <!-- 底部导航-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_tab0"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                  >


                    <ImageView
                        android:id="@+id/main_tab0_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/homepager_nomal"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/main_tab0_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_tab_text1"
                        android:textColor="@drawable/tab_text"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="2dp"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_tab1"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                   >

                    <ImageView
                        android:id="@+id/main_tab1_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/product_nomal"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:id="@+id/main_tab1_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/main_tab_text2"
                        android:textColor="@drawable/tab_text"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_tab2"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                   >

                    <ImageView
                        android:id="@+id/main_tab2_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/active_nomal"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:id="@+id/main_tab2_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="2dp"
                        android:text="活动"
                        android:textColor="@drawable/tab_text"
                        android:textSize="12dp" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/main_tab3"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                   >

                    <ImageView
                        android:id="@+id/main_tab3_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mine_nomal"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:id="@+id/main_tab3_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/main_tab_text3"
                        android:textColor="@drawable/tab_text"
                        android:textSize="12dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>